--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <title>Cooking With React</title>
 </head>
 
-<body>
+<body class="test">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 </body>
